<resources>
    <string name="token_banner_standard">ca-app-pub-6201798499291567/1835796625</string>
    <string name="app_name">Real animal sounds</string>
    <string name="app_name_splash_text">Chicki | Animal sounds</string>
    <string name="app_name_splash_text2">Chicki \n Animal sounds</string>
    <string name="guqli_kindergarten">Kindergarten</string>
    <string name="english_1">Rabbit</string>
    <string name="english_2">Bee</string>
    <string name="english_3">Cat</string>
    <string name="english_4">Pigeon</string>
    <string name="english_5">Cow</string>
    <string name="english_6">Whale</string>
    <string name="english_7">Crow</string>
    <string name="english_8">Stork</string>
    <string name="english_9">Goat</string>
    <string name="english_10">Rooster</string>
    <string name="english_11">Eagle</string>
    <string name="english_12">Elephant</string>
    <string name="english_13">Frog</string>
    <string name="english_14">Baby Goat</string>
    <string name="english_15">Goose</string>
    <string name="english_16">Hen</string>
    <string name="english_17">Koala</string>
    <string name="english_18">Lion</string>
    <string name="english_19">Monkey</string>
    <string name="english_20">Mosquito</string>
    <string name="english_21">Mouse</string>
    <string name="english_22">Owl</string>
    <string name="english_23">Panda</string>
    <string name="english_24">Pig</string>
    <string name="english_25">Bear</string>
    <string name="english_26">Seagull</string>
    <string name="english_27">Sheep</string>
    <string name="english_28">Snake</string>
    <string name="english_29">Tiger</string>
    <string name="english_30">Turkey</string>
    <string name="english_31">Cricket</string>
    <string name="english_32">Wolf</string>
    <string name="english_33">Zebra</string>
    <string name="english_34">Rhino</string>
    <string name="english_35">Camel</string>
    <string name="english_36">Dolphin</string>
    <string name="english_37">Giraffe</string>
    <string name="english_38">Canary</string>
    <string name="english_39">Fox</string>
    <string name="english_40">Horse</string>
    <string name="english_41">Squirrel</string>
    <string name="english_42">Duck</string>
    <string name="english_43">Leopard</string>
    <string name="english_44">Deer</string>
    <string name="english_45">Raccoon</string>
    <string name="english_46">Lamb</string>
    <string name="english_47">Donkey</string>
    <string name="english_48">Woodpecker</string>
    <string name="english_49">Seal</string>
    <string name="english_50">Sparrow</string>
    <string name="english_51">Hoopoe</string>
    <string name="english_52">Chick</string>
    <string name="english_53">Vulture</string>
    <string name="english_54">Lizard</string>
    <string name="english_55">Penguin</string>
    <string name="english_56">Peacock</string>
    <string name="english_57">Parrot</string>
    <string name="english_58">Quail</string>
    <string name="english_59">Hawk</string>
    <string name="english_60">Nightingale</string>
    <string name="english_61">Lark</string>
    <string name="english_62">Dog</string>
    <string name="english_63">Ostrich</string>
    <string name="english_64">Flamingo</string>
    <string name="english_65">Pheasant</string>
    <string name="english_66">Jackal</string>
    <string name="english_67">Gazelle</string>
    <string name="english_68">Kangaroo</string>
    <string name="english_69">Swallow</string>
    <string name="english_70">Alligator</string>
    <string name="english_71">Tortoise</string>
    <string name="english_72">Hyena</string>
    <string name="english_73">Skunk</string>
    <string name="english_74">Hog</string>
    <string name="english_75">Bat</string>
    <string name="english_76">Swan</string>
    <string name="english_77">Myna</string>
    <string name="english_78">Pelikan</string>
    <string name="english_79">Quebec</string>
    <string name="english_80">Casco</string>
    <string name="english_81">Budgies</string>
    <string name="english_82">Finch</string>
    <string name="english_83">Hamster</string>
    <string name="english_84">Mandarin Duck</string>
    <string name="english_85">Spilopelia</string>
    <string name="english_86">Carduelis</string>
    <string name="english_87">Toucan</string>
    <string name="english_88">Cockatiel</string>
    <string name="english_89">Agapornis</string>
    <string name="english_90">Martes</string>
    <string name="english_91">Balearica</string>
    <string name="english_92">goldfinch</string>
    <string name="english_93">Tauraco</string>
    <string name="english_94">Cardinal</string>
    <string name="english_95">Hedgehog</string>
    <string name="english_96">Magpie</string>
    <string name="english_97">Grey Heron</string>
    <string name="english_98">Iguana</string>
    <string name="english_99">Anteater</string>
    <string name="english_100">Teal</string>
    <string name="english_101">Cheetah</string>
    <string name="english_102">Lama</string>
    <string name="english_103">Walrus</string>
    <string name="english_104">Hippo</string>
    <string name="english_105">Gorilla</string>
    <string name="english_106">Vanellus</string>
    <string name="english_107">kiwi</string>
    <string name="english_108">Guineafowl</string>
    <string name="english_109">Cuckoo</string>
    <string name="english_110">Houbara</string>
    <string name="english_111">Hornbill</string>
    <string name="english_112">Meerkat</string>
    <string name="english_113">Opposum</string>
    <string name="english_114">Wagtail</string>
    <string name="english_115">Pangolins</string>
    <string name="french_1">Lapin</string>
    <string name="french_2">Abeille</string>
    <string name="french_3">Chat</string>
    <string name="french_4">Pigeon</string>
    <string name="french_5">Vache</string>
    <string name="french_6">Baleine</string>
    <string name="french_7">Corbeau</string>
    <string name="french_8">Cigogne</string>
    <string name="french_9">Chèvre</string>
    <string name="french_10">Coq</string>
    <string name="french_11">Aigle</string>
    <string name="french_12">Éléphant</string>
    <string name="french_13">Grenouille</string>
    <string name="french_14">Chevreau</string>
    <string name="french_15">Oie</string>
    <string name="french_16">Poule</string>
    <string name="french_17">Koala</string>
    <string name="french_18">Lion</string>
    <string name="french_19">Singe</string>
    <string name="french_20">Moustique</string>
    <string name="french_21">Souris</string>
    <string name="french_22">Hibou</string>
    <string name="french_23">Panda</string>
    <string name="french_24">Cochon</string>
    <string name="french_25">Ours</string>
    <string name="french_26">Mouette</string>
    <string name="french_27">Mouton</string>
    <string name="french_28">Serpent</string>
    <string name="french_29">Tigre</string>
    <string name="french_30">Dinde</string>
    <string name="french_31">Criquet</string>
    <string name="french_32">Loup</string>
    <string name="french_33">Zèbre</string>
    <string name="french_34">Rhinocéros</string>
    <string name="french_35">Chameau</string>
    <string name="french_36">Dauphin</string>
    <string name="french_37">Girafe</string>
    <string name="french_38">Canari</string>
    <string name="french_39">Renard</string>
    <string name="french_40">Cheval</string>
    <string name="french_41">Écureuil</string>
    <string name="french_42">Canard</string>
    <string name="french_43">Léopard</string>
    <string name="french_44">Cerf</string>
    <string name="french_45">Raton laveur</string>
    <string name="french_46">Agneau</string>
    <string name="french_47">Âne</string>
    <string name="french_48">Pic-vert</string>
    <string name="french_49">Phoque</string>
    <string name="french_50">Moineau</string>
    <string name="french_51">Huppe fasciée</string>
    <string name="french_52">Poussin</string>
    <string name="french_53">Vautour</string>
    <string name="french_54">Lézard</string>
    <string name="french_55">Manchot</string>
    <string name="french_56">Paon</string>
    <string name="french_57">Perroquet</string>
    <string name="french_58">Caille</string>
    <string name="french_59">Faucon</string>
    <string name="french_60">Rossignol</string>
    <string name="french_61">Alouette</string>
    <string name="french_62">Chien</string>
    <string name="french_63">Autruche</string>
    <string name="french_64">Flamant</string>
    <string name="french_65">Faisan</string>
    <string name="french_66">Chacal</string>
    <string name="french_67">Gazelle</string>
    <string name="french_68">Kangourou</string>
    <string name="french_69">Hirondelle</string>
    <string name="french_70">Alligator</string>
    <string name="french_71">Tortue</string>
    <string name="french_72">Hyène</string>
    <string name="french_73">Moufette</string>
    <string name="french_74">Sanglier</string>
    <string name="french_75">Chauve-souris</string>
    <string name="french_76">Cygne</string>
    <string name="french_77">Mainate</string>
    <string name="french_78">Pélican</string>
    <string name="french_79">Québec</string>
    <string name="french_80">Casco</string>
    <string name="french_81">Perruches ondulées</string>
    <string name="french_82">Pinson</string>
    <string name="french_83">Hamster</string>
    <string name="french_84">Canard mandarin</string>
    <string name="french_85">Spilopélie</string>
    <string name="french_86">Carduelis</string>
    <string name="french_87">Toucan</string>
    <string name="french_88">Calopsitte élégante</string>
    <string name="french_89">Inséparables</string>
    <string name="french_90">Martre</string>
    <string name="french_91">Grue couronnée</string>
    <string name="french_92">Chardonneret</string>
    <string name="french_93">Touraco</string>
    <string name="french_94">Cardinal</string>
    <string name="french_95">Hérisson</string>
    <string name="french_96">Pie</string>
    <string name="french_97">Héron cendré</string>
    <string name="french_98">Iguane</string>
    <string name="french_99">Fourmilier</string>
    <string name="french_100">Sarcelle</string>
    <string name="french_101">Guépard</string>
    <string name="french_102">Lama</string>
    <string name="french_103">Morse</string>
    <string name="french_104">Hippopotame</string>
    <string name="french_105">Gorille</string>
    <string name="french_106">Vanneau</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="game_level">Game Level</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="en">English name</string>
    <string name="animal_sound">Animal sound</string>
    <string name="fa">Farsi name</string>
    <string name="exit">Exit</string>
    <string name="start">start</string>
    <string name="text_dialog_start">Tap with your finger on the bubble that has the correct answer</string>
    <string name="memory_game_hint_name">Name</string>
    <string name="memory_game_enter_name_explain">Enter your name</string>
    <string name="name_and_sound">By clicking, only the English name and French name will be played</string>
    <string name="name_france">By clicking, only the French name will be played</string>
    <string name="name_english">By clicking, only the English name will be played</string>
    <string name="image_animated_first_page">On the first page, there are animated images</string>
    <string name="on_the_first_page_the_images_are_real">On the first page, the images are real</string>
    <string name="after_clicking_the_photo_will_be_zoom_in">After clicking, the photo will be Zoomed in</string>
    <string name="do_not_zoom_the_photo_after_clicking">Do not zoom the photo after clicking</string>
</resources>