<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:layout_gravity="bottom"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtExplainRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.7"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:background="@color/white"
        android:hint="@string/memory_game_hint_name"
        android:inputType="textPersonName"
        android:padding="@dimen/_4sdp"
        android:textColor="#ff0000"
        android:textColorHint="#bdbdbd" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/memory_game_enter_name_explain"
        android:textColor="#000000"
        android:textSize="@dimen/_11sdp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_weight="0.7"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            app:backgroundTint="@null"
            android:layout_weight="0.5"
            android:background="@drawable/shape_choose_coloring_1"

            android:lines="3"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:layout_weight="0.5"
            app:backgroundTint="@null"
            android:background="@drawable/shape_choose_coloring_3"

            android:lines="3"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>