<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_white_rounded"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_64sdp"
        app:srcCompat="@drawable/shape_orange_top_corner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/game_level"
        app:layout_constraintTop_toTopOf="@id/imageHeader"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"
        app:layout_constraintStart_toStartOf="@id/imageHeader"
        app:layout_constraintEnd_toEndOf="@id/imageHeader"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="26sp"

        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lineBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageHeader"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnEasy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:padding="@dimen/_8sdp"
            android:clickable="true"

            android:focusable="true"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:background="@drawable/bg_ripple_shape_border_btn_easy"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:padding="@dimen/_8sdp"

            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:background="@drawable/bg_ripple_shape_border_btn_medium"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnHard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:clickable="true"
            android:focusable="true"

            android:padding="@dimen/_8sdp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:background="@drawable/bg_ripple_shape_border_btn_hard"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>